--- a/.github/workflows/Docker.yml
+++ b/.github/workflows/Docker.yml
@@ -41,7 +41,7 @@ jobs:
         run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
 
       - name: Build Docker image
-        run: docker build . --file Dockerfile --tag ziermann/tut:${{steps.version.outputs.tag}}
+        run: docker build . --file Dockerfile --tag renzzog77/ga_ds:${{steps.version.outputs.tag}}
 
       - name: Push to Docker Hub
         run: docker push renzzog77/ga_ds:${{steps.version.outputs.tag}}
